Add search to NextStep marketplace orders
